<resources>
    <string name="app_name">TreasureApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="welcome_home">Welcome Home!</string>
    <string name="welcome_back_login">Welcome Back, Login!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="browse">Browse</string>
</resources>